# pikuma-phys

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  flake.nix
src/: Application.cpp  Application.h  Graphics.cpp  Graphics.h  Main.cpp  QuickTest.cpp
src/Physics/: Body.cpp  Body.h  Collision.cpp  Collision.h  Constants.h  Constraint.cpp  Constraint.h  Contact.cpp  Contact.h  Force.cpp  Force.h  Particle.cpp  Particle.h  Shape.cpp  Shape.h  Vec2.cpp  Vec2.h  World.cpp  World.h  matN.h
